# CADCourseCode_cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/Draw/: Draw.cpp  Draw.hpp
src/EulerOp/: EulerOp.cpp  EulerOp.hpp
src/HalfEdgeDS/: HalfEdgeDS.cpp  HalfEdgeDS.hpp
src/Sweep/: Sweep.cpp  Sweep.hpp
